# isaidle

./: Cargo.toml  README.md
resources/: isaidle.service
src/: logind.rs  main.rs  rules.rs  state.rs  wayland.rs
