[package]
name = "isaidle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
anyhow = "1"
libc = "0.2"
sd-notify = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
niri-ipc = "26.4.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
